# yast-nfs-server

./: .cvsignore  .gitignore  .travis.yml  CONTRIBUTING.md  MAINTAINER  Makefile.am  Makefile.cvs  README  README.md  RPMNAME  SUBDIRS  configure.in  configure.in.in  yast2-config-nfs-server.spec.in  yast2-nfs-server.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am  ag_exports  ag_idmapd_conf  etc_exports.scr  etc_idmapd_conf.scr  test-exports  test-exports-i.in  test-exports-o.out
doc/: .cvsignore  Makefile.am  index.html  workflow.dia
doc/autodocs/: Makefile.am
package/: yast2-config-nfs-server.changes  yast2-config-nfs_server.changes  yast2-nfs-server.changes  yast2-nfs-server.spec
src/: Makefile.am  NfsServer.ycp  menuentry_nfs_server.y2cc  menuentry_nfs_server.ycp  nfs-server.ycp  nfs_server.desktop  nfs_server.y2cc  nfs_server.ycp  nfs_server_auto.ycp  nfs_server_write.ycp  routines.ycp  ui.ycp
src/autoyast-rnc/: nfs_server.rnc
src/clients/: nfs-server.rb  nfs_server.rb  nfs_server.ycp  nfs_server_auto.rb
src/desktop/: nfs_server.desktop  org.opensuse.yast.NFSServer.desktop  org.oprnSUSE.YaST.NFSServer.desktop
src/include/nfs_server/: routines.rb  ui.rb  ui.ycp
src/modules/: NfsServer.rb  NfsServer.ycp
src/scrconf/: cfg_nfs.scr  etc_exports.scr
src/servers_non_y2/: ag_exports
test/: nfs_server_test.rb  routines_test.rb  test_helper.rb
testsuite/: .gitignore  Makefile.am
testsuite/lib/: yast2_epag.exp
testsuite/run/: runtest-epag.sh
testsuite/tests/: readwrite-unfsd.out  readwrite-unfsd.rb  readwrite-unfsd.ycp  readwrite.out  readwrite.rb  readwrite.ycp  readwrite2.out  readwrite2.rb  readwrite2.ycp  routines1.out  routines1.rb  routines1.ycp  routines2.out  routines2.rb  routines2.ycp
testsuite/tests.epag/: long-17187.r.data  long-17187.rw.ycp  number-21804.r.data  number-21804.r.run  number-21804.rw.rb  number-21804.rw.ycp  number-21804.w.data  single-17187.r.data  single-17187.r.run  single-17187.rw.rb  single-17187.w.data  wild.rw.rb  wild.rw.ycp  wild.w.run
testsuite/yast2-nfs-server.test/: ag_exports.exp
